--- a/wp-content/themes/procase/package.json
+++ b/wp-content/themes/procase/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "del": "^3.0.0",
-    "glob": "^7.1.6"
+    "glob": "^7.1.6",
+    "gulp-install": "^1.1.0"
   },
   "devDependencies": {
     "browser-sync": "^2.26.12",
